# Aetherus

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  environment.yml  flake.nix  setup.cfg
.github/workflows/: bencher.yml  build-test.yml
.husky/: pre-commit  stash-hook.sh
.spack/: repo.yaml
benches/: diffusion.rs
benches/accuracy/: diffusion.rs
benches/data/diffusion/: scene.json5  scene_accuracy.json5
benches/data/diffusion/mats/: air.json5  cube_material.json5
src/: lib.rs
src/core/: mod.rs
src/core/dim/: dim.rs  mod.rs  physical.rs  prefix.rs  si.rs
src/core/memory/: index.rs
src/core/meta/: mod.rs
src/core/number/: complex.rs  integer.rs  mod.rs
src/core/ord/: array_linker.rs  link.rs  register.rs  set.rs
src/core/ord/list/: mod.rs
src/core/ord/list/az/: greek.rs
src/core/ord/list/dim/: mod.rs  polar.rs
src/core/tools/: binner.rs  range.rs
src/core/types/: mod.rs
src/core/types/dim/: dimension.rs  mod.rs  prefix.rs  si.rs
src/core/types/memory/: mod.rs
src/core/types/number/: complex.rs  real.rs
src/core/util/env/: dir.rs  exec.rs  mod.rs
src/core/util/fmt/: data_cube.rs  data_square.rs  data_tesseract.rs
src/data/: average.rs  histogram.rs  histogram_builder.rs  histogram_iter.rs  mod.rs  table.rs
src/diag/: mod.rs
src/diag/data/: histogram.rs  table.rs
src/diag/img/: gradient.rs  gradient_builder.rs  image.rs
src/err/: mod.rs
src/fs/: file.rs  load.rs  mod.rs  redirect.rs  save.rs
src/fs/extensions/: csv.rs  json.rs  lid.rs  mod.rs  netcdf.rs  png.rs  ugrid.rs  wavefront.rs
src/geom/: mod.rs  plane.rs
src/geom/cast/: camera.rs  camera_builder.rs  emitter.rs  emitter_loader.rs
src/geom/domain/: boundary.rs  boundary_builder.rs  grid.rs  grid_builder.rs  mod.rs  object.rs  surface.rs  surface_linker.rs  surface_linker_loader.rs  tree.rs  tree_settings.rs
src/geom/properties/: collide.rs  emit.rs  mod.rs  split.rs  trace.rs  transformable.rs
src/geom/rt/: hit.rs  mod.rs  orient.rs  ray.rs  scan.rs  side.rs
src/geom/shape/: cube.rs  mesh.rs  mesh_loader.rs  mod.rs  segment.rs  smooth_triangle.rs  track.rs  triangle.rs
src/img/: aspect_ratio.rs  gradient_builder.rs  image.rs  image_builder.rs  mod.rs
src/io/: mod.rs
src/io/output/: ccd_builder.rs  mod.rs  output.rs  output_builder.rs  output_config.rs  output_plane.rs  output_plane_builder.rs  output_registry.rs  output_type.rs  output_volume.rs  output_volume_builder.rs  photon_collector.rs  photon_collector_builder.rs  rasterise.rs  rasterise_builder.rs
src/math/: alias.rs  mod.rs  slice.rs  trans3_builder.rs
src/math/func/: formula.rs  formula_builder.rs
src/math/geom/: mod.rs
src/math/geom/pos/: dir3.rs  mod.rs  pos2.rs
src/math/linalg/: dir.rs  mat.rs  mod.rs  pos.rs  rot.rs  trans.rs  vec.rs
src/math/linalg/dir/: dir2.rs  dir3.rs  dir4.rs  mod.rs
src/math/linalg/mat/: mat2.rs  mat3.rs  mat4.rs  mod.rs
src/math/linalg/point/: mod.rs  point2.rs  point3.rs  point4.rs
src/math/linalg/pos/: mod.rs  pos2.rs  pos3.rs  pos4.rs
src/math/linalg/rot/: mod.rs  rot2.rs  rot3.rs
src/math/linalg/trans/: mod.rs  trans2.rs  trans3.rs
src/math/linalg/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/math/rng/: distribution.rs  mod.rs  probability.rs  probability_builder.rs
src/math/stat/: cdf.rs  mod.rs  spherical_cdf.rs
src/meta/: access.rs  clone.rs  mod.rs
src/ord/: array_linker.rs  build.rs  link.rs  mod.rs  multiset.rs  name.rs  register.rs  set.rs
src/ord/list/: mod.rs
src/ord/list/az/: greek.rs
src/ord/list/cols/: rgb.rs
src/ord/list/dim/: cartesian.rs  polar.rs  spherical.rs
src/phys/: crossing.rs  light.rs  light_linker.rs  light_linker_builder.rs  light_linker_builder_loader.rs  local.rs  material.rs  material_builder.rs  mod.rs  photon.rs  reflectance.rs  reflectance_builder.rs  spectrum.rs  spectrum_builder.rs
src/phys/synphot/: mod.rs  transmission.rs  transmission_builder.rs
src/phys/synphot/vision/: lumeff.rs  mod.rs  vl1924e.csv  vlje.csv
src/phys/units/: dim.rs  length.rs  mod.rs  speed.rs  time.rs
src/sim/: event.rs  film_builder.rs  frame.rs  input.rs  mod.rs  output.rs  peel_off.rs  photon_collector.rs  run.rs  scatter.rs  settings.rs  surface.rs  travel.rs
src/sim/attribute/: attribute.rs  attribute_future.rs  attribute_linker.rs  attribute_linker_chain_proxy.rs  attribute_linker_linker.rs  attribute_linker_linker_linker.rs  attribute_linker_linker_linker_linker.rs  attribute_linker_linker_linker_linker_linker.rs  attribute_linker_linker_linker_linker_linker_linker.rs  attribute_linker_linker_linker_linker_linker_linker_linker.rs  attribute_material_linker.rs  attribute_output_linker.rs  mod.rs
src/sim/engine/: engine.rs  engine_builder.rs  engine_builder_loader.rs  mod.rs
src/sim/engine/engines/: fluorescence.rs  photo.rs  raman.rs  standard.rs
src/sim/mcrt/: attribute_linker_linker_linker.rs
src/sim/param/: mod.rs  parameters.rs  parameters_builder.rs  parameters_builder_loader.rs
src/tools/: binner.rs  index.rs  mod.rs  obj_export.rs  progress_bar.rs  range.rs  silent_progress_bar.rs
src/util/: mod.rs
src/util/env/: dir.rs  exec.rs  mod.rs
src/util/fmt/: banner.rs  data_cube.rs  data_square.rs  data_tesseract.rs  gradient.rs  mod.rs  report.rs  term.rs
tests/: mod.rs  pi_estimator.rs
tests/data/: square.nc
