[package]
name = "Aetherus"
version = "0.1.2"
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>", "Sam Morrell <s.a.f.morrell@exeter.ac.uk>"]
edition = "2018"
description = "Physics simulation library and binaries"
repository = "https://github.com/aetherus-wg/aetherus"
readme = "README.md"
license = "MIT"
keywords = ["physics", "mcrt", "rt"]
categories = ["science", "simulation"]
documentation = "https://aetherus-wg.github.io/aetherus"
exclude = ["docs/", "input/", "output/"]

[features]
default = []

[dependencies]
# ARCTK Dependencies
arctk-attr = "0.3.*"
arctk-proc = "0.4.*"

ansi_rgb = "0.2.*"
assert_approx_eq = "1.1.*"
colored = "2.0.*"
dimensioned = "0.7.*"
hex = "0.4.*"
indicatif = "0.16.*"
lazy_static = "1.4.*"
nalgebra = { version = "0.30.*", features = ["serde-serialize"] }
ndarray = { version = "0.15.*", features = ["rayon", "serde-1"] }
ndarray-stats = "0.5.*"
ndarray-parallel = "0.9.*"
num_cpus = "1.13.*"
palette = "0.6.*"
physical_constants = "0.4.*"
png = "0.17.*"
rand = "0.8.*"
rayon = "1.5.*"
rgb = "0.8.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "^1.0.*"
slice-of-array = "0.3.*"
splines = { version = "4.0.*", features = ["serde"] }
terminal_size = "0.1.*"
lidrs = {path="../lidrs"}

# Formats for the File I/O Library. 
json5 = "0.4.*"
# We are currently using the repository instead of the released version, because of unfixed issues in the underlying hdf5 library support on M1 macs. 
netcdf = {git = "https://github.com/georust/netcdf"}

[dev-dependencies]
tempfile = "3.2.*"
statrs = "0.15.*"

[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[lib]

[[bin]]
name = "mcrt"