[package]
name = "aetherus"
version = "0.2.0"
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>", "Sam Morrell <s.a.f.morrell@exeter.ac.uk>"]
edition = "2018"
description = "Physics simulation library and binaries"
repository = "https://github.com/aetherus-wg/aetherus"
readme = "README.md"
license = "MIT"
keywords = ["physics", "mcrt", "rt"]
categories = ["science", "simulation"]
documentation = "https://aetherus-wg.github.io/aetherus"
exclude = ["docs/", "input/", "output/"]

[features]
default = []
mpi = ["dep:mpi", "dep:memoffset"]
pyo3 = ['dep:pyo3']

[dependencies]
# ARCTK Dependencies
arctk-attr = "0.3.*"
arctk-proc = "0.4.*"

ansi_rgb = "0.2.*"
assert_approx_eq = "1.1.*"
colored = "2.0.*"
dimensioned = "0.7.*"
hex = "0.4.*"
indicatif = "0.17.*"
lazy_static = "1.4.*"
nalgebra = { version = "0.31.*", features = ["serde-serialize"] }
ndarray = { version = "0.15.*", features = ["rayon", "serde-1"] }
ndarray-stats = "0.5.*"
num_cpus = "1.13.*"
palette = "0.6.*"
physical_constants = "0.4.*"
png = "0.17.*"
rand = "0.8.*"
rayon = "1.5.*"
rgb = "0.8.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "^1.0.*"
slice-of-array = "0.3.*"
splines = { version = "4.0.*", features = ["serde"] }
statrs = "0.15.*"
terminal_size = "0.2.*"
cubic-splines = "0.2.0"
lidrs = "0.2.*"

# Formats for the File I/O Library.
json5 = "0.4.*"
netcdf = { version = "^0.11.*", features = ["ndarray"] }

# Optional MPI dependencies
mpi = { version = "0.7.0", optional = true }
memoffset = { version = "0.9.0", optional = true }

# Python modules
pyo3 = { version = "0.21.1", features = ["extension-module"], optional = true }
obj = "0.10.2"
anyhow = "1.0.100"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.2.*"
statrs = "0.15.*"

[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[lib]

[[bin]]
name = "mcrt"

[[bin]]
name = "mpi_tests"
path = "src/bin/tests/mpi_tests.rs"
required-features = ["mpi"]
