[metadata]
name = Aetherus
version = 0.1.1
author = Freddy Wordingham, Sam Morrell
author_email = f.wordingham@exeter.ac.uk, s.morrell@exeter.ac.uk
description = Numerical simulation tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aetherus-wg/aetherus
project_urls =
    Bug Tracker = https://github.com/aetherus-wg/aetherus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = script
packages = find:
python_requires = >=3.9

[options.packages.find]
where = script
